# prefect-polygon-etl

./: .gitignore  .pdm-python  README.md  pyproject.toml  requirements.txt
delta-rs-etl/: pyproject.toml
delta-rs-etl/src/delta_rs_etl/: upsert.py
delta-rs-etl/tests/: __init__.py
notebooks/: polygon_list_tickers_paginated.ipynb  query_silver_aggs.ipynb  test_polygon_API_with_prefect_secrets.ipynb
src/flows/: deploy_all.py
src/flows/environment/: __init__.py
src/flows/examples/: github_stats.py
src/flows/polygon_elt/: bronze.py  client.py  get_aggregates.py  silver.py
src/polygon_etl/config/: storage.py
src/polygon_etl/flows/: bronze.py  deploy_all.py  silver.py
src/prefect_etl/: storage_config.py
src/prefect_etl_config/: polygon_client.py
src/setup/: save_prefect_secret.py
