[project]
name = "prefect-polygon-etl"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "inigohidalgo", email = "inigohrey@gmail.com"},
]
dependencies = [
    "prefect>=2",
    "polars",
    "deltalake",
    "duckdb",
    "s3fs",
    "polygon-api-client",
    "ipykernel",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = ["-e file:///${PROJECT_ROOT}/delta-rs-etl#egg=delta-rs-etl"]
