[project]
name = "delta-rs-etl"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "inigohidalgo", email = "inigohrey@gmail.com"},
]
dependencies = [
    "polars",
    "deltalake",

]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
test = [
    "pytest",
]
dev = [
    "ipykernel",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true